--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,12 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 max_line_length = 120
 charset = utf-8
+
+[*.cs]
+indent_size = 4
+
+[*.{config,csproj}]
+indent_size = 2
+
+[*.json]
+indent_size = 2
