--- a/.editorconfig
+++ b/.editorconfig
@@ -10,8 +10,8 @@ charset = utf-8
 [*.cs]
 indent_size = 4
 
-[*.{config,csproj}]
+[*.{config, csproj}]
 indent_size = 2
 
-[*.json]
+[*.{json, yaml}]
 indent_size = 2
