--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -24,6 +24,11 @@ stages:
         pool:
           vmImage: ubuntu-latest
         steps:
+          - task: UseDotNet@2
+            displayName: 'Use .NET Core SDK 3.1'
+            inputs:
+              packageType: sdk
+              version: 3.1.x
           - task: DotNetCoreCLI@2
             displayName: dotnet restore
             inputs:
