Change launch profile name to match project

--- a/src/DotNetNew.WebApi/Steeltoe.DotNetNew.WebApi/Steeltoe.WebApi.CSharp/Properties/launchSettings.json
+++ b/src/DotNetNew.WebApi/Steeltoe.DotNetNew.WebApi/Steeltoe.WebApi.CSharp/Properties/launchSettings.json
@@ -21,7 +21,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Sample": {
+    "Steeltoe.WebApi.CSharp": {
       "commandName": "Project",
       "launchBrowser": true,
       //#if(FrameworkNet50)
