--- a/src/DotNetNew.WebApi/Steeltoe.DotNetNew.WebApi/Steeltoe.WebApi.CSharp/appsettings.Development.json
+++ b/src/DotNetNew.WebApi/Steeltoe.DotNetNew.WebApi/Steeltoe.WebApi.CSharp/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "Steeltoe": "Information",
-      "Steeltoe.WebApi.CSharp": "Debug"
+      "Company.WebApplication1": "Debug"
     }
   }
 }
