--- a/src/DotNetNew.WebApi/Steeltoe.DotNetNew.WebApi/Steeltoe.WebApi.CSharp/appsettings.json
+++ b/src/DotNetNew.WebApi/Steeltoe.DotNetNew.WebApi/Steeltoe.WebApi.CSharp/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "Steeltoe": "Warning",
-      "Steeltoe.WebApi.CSharp": "Information"
+      "Company.WebApplication1": "Information"
     }
   }
 }
