Add random value configuration support [#13]

--- a/src/DotNetNew.WebApi/CSharp/Company.WebApplication1.csproj
+++ b/src/DotNetNew.WebApi/CSharp/Company.WebApplication1.csproj
@@ -26,4 +26,10 @@
   </ItemGroup>
   <!--#endif -->
 
+  <!--#if (RandomValue) -->
+  <ItemGroup>
+    <PackageReference Include="Steeltoe.Extensions.Configuration.RandomValueBase" Condition="'$(RandomValue)'" Version="$(SteeltoeVersion)"/>
+  </ItemGroup>
+  <!--#endif -->
+
 </Project>
