Use a simple smoke test per option for pipeline

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -42,4 +42,4 @@ stages:
             displayName: dotnet test
             inputs:
               command: test
-              arguments: --no-build
+              arguments: --no-build --filter Category=Smoke
