Use fuzzy package references

--- a/test/DotNetNew.Test.Utilities/Steeltoe.DotNetNew.Test.Utilities.csproj
+++ b/test/DotNetNew.Test.Utilities/Steeltoe.DotNetNew.Test.Utilities.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="FluentAssertions" Version="$(FluentAssertionsVersion)" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNetTestSdkVersion)" />
     <PackageReference Include="xunit" Version="$(XunitVersion)" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+    <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitVersion)">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
