--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -1,10 +1,10 @@
 <Project>
 
   <PropertyGroup>
-    <CoverletCollectorVersion>1.3.0</CoverletCollectorVersion>
-    <FluentAssertionsVersion>5.10.3</FluentAssertionsVersion>
+    <CoverletCollectorVersion>1.3.*</CoverletCollectorVersion>
+    <FluentAssertionsVersion>5.10.*</FluentAssertionsVersion>
     <MicrosoftNetTestSdkVersion>16.8.*</MicrosoftNetTestSdkVersion>
-    <XunitVersion>2.4.1</XunitVersion>
+    <XunitVersion>2.4.*</XunitVersion>
   </PropertyGroup>
 
 </Project>
