--- a/src/DotNetNew.WebApi/CSharp/Directory.Build.props
+++ b/src/DotNetNew.WebApi/CSharp/Directory.Build.props
@@ -1,7 +1,8 @@
 <Project>
 
   <PropertyGroup>
-    <AzureSpringCloud>false</AzureSpringCloud>
+    <AzureSpringCloudHosting>false</AzureSpringCloudHosting>
+    <CloudFoundryHosting>false</CloudFoundryHosting>
     <FrameworkNet50>true</FrameworkNet50>
     <FrameworkNetCoreApp21>false</FrameworkNetCoreApp21>
     <PlaceholderConfiguration>false</PlaceholderConfiguration>
