Fix placeholder configuration for Steeltoe 2.5 [#12]

--- a/src/DotNetNew.WebApi/CSharp/Directory.Build.props
+++ b/src/DotNetNew.WebApi/CSharp/Directory.Build.props
@@ -8,6 +8,7 @@
     <MicrosoftAzureSpringCloudClientVersion>2.0.0-preview.1</MicrosoftAzureSpringCloudClientVersion>
     <PlaceholderConfiguration>false</PlaceholderConfiguration>
     <RandomValueConfiguration>false</RandomValueConfiguration>
+    <Steeltoe2>false</Steeltoe2>
   </PropertyGroup>
 
 </Project>
