Add option for Spring Cloud Config client [#11]

--- a/src/DotNetNew.WebApi/CSharp/Directory.Build.props
+++ b/src/DotNetNew.WebApi/CSharp/Directory.Build.props
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <AzureSpringCloudHosting>false</AzureSpringCloudHosting>
+    <CloudConfigClient>false</CloudConfigClient>
     <CloudFoundryHosting>false</CloudFoundryHosting>
     <FrameworkNet50>true</FrameworkNet50>
     <FrameworkNetCoreApp21>false</FrameworkNetCoreApp21>
