--- a/src/DotNetNew.WebApi/CSharp/Directory.Build.props
+++ b/src/DotNetNew.WebApi/CSharp/Directory.Build.props
@@ -13,6 +13,7 @@
     <MicrosoftAzureSpringCloudClientVersion>2.0.0-preview.1</MicrosoftAzureSpringCloudClientVersion>
     <PlaceholderConfiguration>false</PlaceholderConfiguration>
     <RandomValueConfiguration>false</RandomValueConfiguration>
+    <RabbitMqConnector>false</RabbitMqConnector>
     <RabbitMqVersion>5.1.*</RabbitMqVersion>
     <Steeltoe2>false</Steeltoe2>
   </PropertyGroup>
